Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,4 +1,4 @@
-"Bohemian Rhapsody"
-"We Are the Champions"
-"Another One Bites the Dust"
-"We Will Rock You"
+<li>"Bohemian Rhapsody"</li>
+<li>"We Are the Champions"</li>
+<li>"Another One Bites the Dust"</li>
+<li>"We Will Rock You"</li>
