--- a/my_list.html
+++ b/my_list.html
@@ -1,5 +1,5 @@
 
-<p>These are my favorite Queen Songs!</p>
+<p>These are my favorite Queen songs!</p>
 <ul>
   <li>"Bohemian Rhapsody"</li>
   <li>"We Are the Champions"</li>
